# democracy-of-the-future-public

./: .env.example  .gitignore  README.md  conda.yaml  pyproject.toml  settings.py
src/: bot.py  main.py  sejm.py
